cssエラーチェック

--- a/default.css
+++ b/default.css
@@ -122,7 +122,7 @@ footer {
 }
 
 ._0 .checkboxInnerBox {
-  webkit-transition: all .1s .15s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: all .1s .15s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all .1s .15s cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-property: transform, border-radius;
   transition-property: transform, border-radius;
@@ -260,7 +260,7 @@ footer {
 }
 
 .slow .checkboxInnerBox {
-  webkit-transition: all 1s 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: all 1s 1.5s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 1.s 1.5s cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-property: transform, border-radius;
   transition-property: transform, border-radius;
